# pubg_observer_generator

./: .gitignore  .tool-versions  README.md  pyproject.toml
.cursor/: rules
content/example/s15/div4/: Slots.txt
src/pubg_observer_generator/: __init__.py  main.py
tests/: test_short_names.py
